tests/baselines/reference/tupleKindsParseErrors.errors.txt
tests/cases/compiler/tupleKindsParseErrors.ts(1,44): error TS1144: '{' or ';' expected.
tests/cases/compiler/tupleKindsParseErrors.ts(1,44): error TS2304: Cannot find name 'is'.
tests/cases/compiler/tupleKindsParseErrors.ts(1,47): error TS1005: ';' expected.
tests/cases/compiler/tupleKindsParseErrors.ts(1,47): error TS2304: Cannot find name 'boolean'.
tests/cases/compiler/tupleKindsParseErrors.ts(1,55): error TS1005: ';' expected.
tests/cases/compiler/tupleKindsParseErrors.ts(3,45): error TS1144: '{' or ';' expected.
tests/cases/compiler/tupleKindsParseErrors.ts(3,46): error TS2304: Cannot find name 'U'.
tests/cases/compiler/tupleKindsParseErrors.ts(5,29): error TS1005: '>' expected.
tests/cases/compiler/tupleKindsParseErrors.ts(5,37): error TS2304: Cannot find name 'string'.
tests/cases/compiler/tupleKindsParseErrors.ts(5,45): error TS1109: Expression expected.
tests/cases/compiler/tupleKindsParseErrors.ts(5,48): error TS2304: Cannot find name 'args'.
tests/cases/compiler/tupleKindsParseErrors.ts(5,52): error TS1005: ';' expected.


==== tests/cases/compiler/tupleKindsParseErrors.ts (12 errors) ====
    function noPredicates<...T>(...args): ...T is boolean {
                                               ~~
!!! error TS1144: '{' or ';' expected.
                                               ~~
!!! error TS2304: Cannot find name 'is'.
                                                  ~~~~~~~
!!! error TS1005: ';' expected.
                                                  ~~~~~~~
!!! error TS2304: Cannot find name 'boolean'.
                                                          ~
!!! error TS1005: ';' expected.
    }
    function noArguments<...T, U>(...args): ...T<U> {
                                                ~
!!! error TS1144: '{' or ';' expected.
                                                 ~
!!! error TS2304: Cannot find name 'U'.
    }
    function noConstraints<...T extends string>(...args) {
                                ~~~~~~~
!!! error TS1005: '>' expected.
                                        ~~~~~~
!!! error TS2304: Cannot find name 'string'.
                                                ~~~
!!! error TS1109: Expression expected.
                                                   ~~~~
!!! error TS2304: Cannot find name 'args'.
                                                       ~
!!! error TS1005: ';' expected.
    }
    